converted a few more absolute image links
Former-commit-id: e84f18907eff687e31bac9d2da42acf90a4c3bb3

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 				<div class="darkYellow pix">
 					<button class="numbers tooltipBMR" style="top: 65%; left: 50%;">1
 					<span>
-					<img class="tooltip-img" src="http://moonwards.com/img/kreep.jpg" alt="map showing hotspot of thorium concentration at Lalande crater">
+					<img class="tooltip-img" src="img/kreep.jpg" alt="map showing hotspot of thorium concentration at Lalande crater">
 						This is where one of the highest concentrations of thorium detected on the Moon is. 
 						The map at right by the Lunar Prospector marks hotspots of it in white. Where 
 						there is thorium, there is KREEP - Potassium, 
@@ -142,7 +142,7 @@
 					</button>
 					<button class="numbers tooltipBR" style="top: 43%; left: 60%;">3
 						<span>
-						<img src="http://moonwards.com/img/lalande-titanium.jpg" alt="high concentrations of titanium near Lalande crater">
+						<img src="img/lalande-titanium.jpg" alt="high concentrations of titanium near Lalande crater">
 						This combination of Clementine mission camera data suggests high concentrations of titanium in some areas of Lalande, 
 						probably in the form of ilmenite. 
 						That is a mineral with the formula FeTiO3 that can be processed with hydrogen to produce iron, water, and titanium dioxide.
@@ -202,7 +202,7 @@
 						infrastructure, so it will be presented as part of later phases.  
 						</span>
 						</button>
-						<img src="http://moonwards.com/img/LalandeSite500.jpg" alt="East rim of Lalande Crater">
+						<img src="img/LalandeSite500.jpg" alt="East rim of Lalande Crater">
 				</div>
 			</div>
 			<div class="col-4 col-m-4">
@@ -267,7 +267,7 @@
 					</button>
 					<button class="numbers tooltipML" style="top: 55.5%; left: 72.5%;">13
 						<span>
-							<img class="tooltip-img" style="float: left;" src="http://moonwards.com/img/Teacup250.jpg">
+							<img class="tooltip-img" style="float: left;" src="img/Teacup250.jpg">
 						This crater has a soft rim and no floor, the incline of its sides just meet. 
 						That may indicate the top layer of granular regolith is deeper than it is, so over 40 m. 
 						Recent modeling has shown the ground sort of folds back on itself on the lips of craters, which 
@@ -287,7 +287,7 @@
 					</button>
 					<button class="numbers tooltipMR" style="top: 52%; left: 4%;">15
 						<span>
-						<img class="tooltip-img" src="http://moonwards.com/img/lalande-skylight-3frame.jpg" 
+						<img class="tooltip-img" src="img/lalande-skylight-3frame.jpg" 
 						alt="3 views of lalande skylight">
 						There is a skylight in this area. The three images show it in the mid-afternoon, morning, and at 
 						midday. It is about 10 m by 20 m wide, and based on the sun angle when the left shot was taken, 
@@ -335,7 +335,7 @@
 						is thicker. What if some of that later drained away? That would leave a hollow dome. 
 						Wouldn't that be nice? Each one of these is 200 m across. What if, just maybe, the domes 
 						were created by bubbles of gas? 
-						<img class="tooltip-img" src="http://moonwards.com/img/lal-domes.jpg">
+						<img class="tooltip-img" src="img/lal-domes.jpg">
 						</span>
 					</button>
 					<button class="numbers tooltipR" style="top: 58%; left: 21%;">19
@@ -723,7 +723,7 @@
 	 <div class="rowR">	 
 			<div class="col-11 col-m-11 darkYellow">
 				<div class="darkYellow pix">
-			<img src="http://moonwards.com/img/GibF1400.jpg" alt="overview of first structures">
+			<img src="img/GibF1400.jpg" alt="overview of first structures">
 			<button class="numbers tooltipBR" style="top: 45%; left: 9%;">12
 	 			<span>
 	 			Here are all the struts that 
