--- a/learn.html
+++ b/learn.html
@@ -41,6 +41,7 @@ MathJax.Hub.Config({
 });
 		</script>
 		<script async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+		<script src="js/space.js"></script>
 		<style>
 			input, button {
 				color:black;
