--- a/index.html
+++ b/index.html
@@ -1,77 +1,76 @@
 <!doctype html>
 <html class="no-js" lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Moonwards</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png">
-<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-<link rel="icon" type="image/png" href="/android-chrome-192x192.png" sizes="192x192">
-<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
-<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-<link rel="manifest" href="/manifest.json">
-<meta name="msapplication-TileColor" content="#da532c">
-<meta name="msapplication-TileImage" content="/mstile-144x144.png">
-<meta name="theme-color" content="#ffffff">
-<link rel="stylesheet" href="css/normalize.css">
-<link rel="stylesheet" href="css/cssportal.tooltip.css">
-<link rel="stylesheet" href="css/main.css">
-<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,400,400i,600" rel="stylesheet">
-<script src="js/modernizr-2.8.3.min.js"></script>
-    </head>
-        <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. 
-            A lot of stuff on Moonwards relies on modern standards, so you may want to <a href="https://www.mozilla.org/en-US/firefox/new/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+	<head>
+		<title>Moonwards</title>
+		<meta charset="utf-8">
+		<meta http-equiv="x-ua-compatible" content="ie=edge">
+		<meta name="msapplication-TileColor" content="#da532c">
+		<meta name="msapplication-TileImage" content="/mstile-144x144.png">
+		<meta name="theme-color" content="#ffffff">
+		<meta name="description" content="">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
+		<link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
+		<link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
+		<link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
+		<link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png">
+		<link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png">
+		<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+		<link rel="icon" type="image/png" href="/android-chrome-192x192.png" sizes="192x192">
+		<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
+		<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+		<link rel="manifest" href="/manifest.json">
+		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/cssportal.tooltip.css">
+		<link rel="stylesheet" href="css/main.css">
+		<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,400,400i,600" rel="stylesheet">
+		<script src="js/modernizr-2.8.3.min.js"></script>
+	</head>
+<body>
+<!--[if lt IE 8]>
+<p class="browserupgrade">You are using an <strong>outdated</strong> browser. 
+A lot of stuff on Moonwards relies on modern standards, so you may want to <a href="https://www.mozilla.org/en-US/firefox/new/">upgrade your browser</a> to improve your experience.</p>
+<![endif]-->
 	<header>
-	<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards logo" id="logo">
+		<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards logo" id="logo">
 	  	<nav>
-	  	<div id="nav">
-  		<ul>
-  			<li><a href="index.html">The VMC</a>
+	  		<div id="nav">
   				<ul>
-  					<li><a href="index.html#colony">Colony Phase 1</a>
+  					<li><a href="index.html">The VMC</a>
+ 		 				<ul>
+ 		 					<li><a href="index.html#colony">Colony Phase 1</a></li>
+ 		 				</ul>
+  					</li>
+  					<li><a href="planning.html">Plan</a>
+  						<ul>
+  							<li><a href="planning.html#equipment">Equipment</a></li>
+  							<li><a href="planning.html#structures">Structures</a></li>
+  						</ul>
+  					</li>
+  					<li><a href="learn.html">Learn</a>
+  						<ul>
+  							<li><a href="learn.html#interactives">Interactives</a></li>
+  							<li><a href="learn.html#lessons">Lessons</a></li>
+  						</ul>
+  					<li><a href="why.html">Why</a>
+  						<ul>
+  							<li><a href="why.html#about">About Us</a></li>
+  						</ul>
+  					</li>
+  					<li><a href="http://moonwards1.blogspot.mx/">Talk</a>
+  						<ul>
+  							<li><a href="http://moonwards1.blogspot.mx/">Blog</a></li>
+  							<li><a href="http://www.moonwards.com/forum/">Forum</a></li>
+  						</ul>
+  					</li>
+					<li><a href="https://realtimeboard.com/app/board/o9J_k0iGgz4=/">Whiteboard</a>
   					</li>
   				</ul>
-  			</li>
-  			<li><a href="planning.html">Plan</a>
-  				<ul>
-  					<li><a href="planning.html#equipment">Equipment</a></li>
-  					<li><a href="planning.html#structures">Structures</a></li>
-  				</ul>
-  			</li>
-  			<li><a href="learn.html">Learn</a>
-  				<ul>
-  					<li><a href="learn.html#interactives">Interactives</a></li>
-  					<li><a href="learn.html#lessons">Lessons</a></li>
-  				</ul>
-  			<li><a href="why.html">Why</a>
-  				<ul>
-  					<li><a href="why.html#about">About Us</a></li>
-  				</ul>
-  			</li>
-  			<li><a href="http://moonwards1.blogspot.mx/">Talk</a>
-  				<ul>
-  				<li><a href="http://moonwards1.blogspot.mx/">Blog</a></li>
-  					<li><a href="http://www.moonwards.com/forum/">Forum</a></li>
-  				</ul>
-  			</li>
-			<li><a href="https://realtimeboard.com/app/board/o9J_k0iGgz4=/">Whiteboard</a>
-  			</li>
-  		</ul>
-  		</div>
-  	</nav>
+  			</div>
+  		</nav>
 	</header>
 <div id="container">
 	<div class="rowR">
@@ -79,13 +78,13 @@
 			What would it <span style="color: yellow;">really</span> be like to live on the Moon?
 		</h3>
 	</div>
-    <div class="rowR">
-     		<h1 class="col-9 col-m-10">The <span class="yellow">V</span>irtual <span class="yellow">M</span>oon 
-     		<span class="yellow">C</span>olony Project: 
-     		<span class="yellow">Cernan's Promise</span> VMC</h1>
-    </div>
-    <div class="rowR pix">
-     		<p class="col-9r12 col-m-10r12 black roundLeft">
+	<div class="rowR">
+		<h1 class="col-9 col-m-10">The <span class="yellow">V</span>irtual <span class="yellow">M</span>oon 
+		<span class="yellow">C</span>olony Project: 
+		<span class="yellow">Cernan's Promise</span> VMC</h1>
+	</div>
+	<div class="rowR pix">
+		<p class="col-9r12 col-m-10r12 black roundLeft">
      		Here you will see what a focused drive to settle the Moon can create.  
      		The first colony 
      		will fundamentally change the way humanity sees itself and its place in the universe. 
@@ -101,25 +100,24 @@
      		When people get a sense of that future, the will understand why it matters. Once enough of us understand that, 
      		we will act. We will settle the Moon, and cross perhaps the most important threshold in human history since we 
      		mastered fire.
-     		</p>
-    </div>
-    <div class="rowL">
-		 <h2 class="col-10 col-m-12">
+		</p>
+	</div>
+	<div class="rowL">
+		<h2 class="col-10 col-m-12">
 		 	<span class="yellow">Site:</span> East rim of <span class="yellow">Lalande Crater</span>, 4.5<sup>o</sup>S 8<sup>o</sup>W
-		 </h2>
-		 
-	 </div>
-	 <div class="rowL black">
-	 	<div class="col-12 col-m-12">
-		 	<p class="centertext yellow">
+		</h2>	 
+	</div>
+	<div class="rowL black">
+		<div class="col-12 col-m-12">
+			<p class="centertext yellow">
 		 	Hover over or tap the numbered markers to see more information.
 		 	</p>
-		 </div>	 
-			<div class="col-4 col-m-4">
-				<div class="darkYellow pix">
-					<button class="numbers tooltipBMR" style="top: 65%; left: 50%;">1
+		</div>	 
+		<div class="col-4 col-m-4">
+			<div class="darkYellow pix">
+				<button class="numbers tooltipBMR" style="top: 65%; left: 50%;">1
 					<span>
-					<img class="tooltip-img" src="img/kreep.jpg" alt="map showing hotspot of thorium concentration at Lalande crater">
+						<img class="tooltip-img" src="img/kreep.jpg" alt="map showing hotspot of thorium concentration at Lalande crater">
 						This is where one of the highest concentrations of thorium detected on the Moon is. 
 						The map at right by the Lunar Prospector marks hotspots of it in white. Where 
 						there is thorium, there is KREEP - Potassium, 
@@ -131,24 +129,24 @@
 						samarium are used for making high-strength magnets - which in 0.16 g could do lots of neat stuff. 
 						Thorium can be processed into fuel for nuclear rocket engines.
 					</span>
-					</button>
-					<button class="numbers tooltipBMR" style="top: 62%; left: 62%;">2
+				</button>
+				<button class="numbers tooltipBMR" style="top: 62%; left: 62%;">2
 						<span>As with all other sites that were considered, this site is on the 'shore' of a basalt mare. Both mare 
 						and highland materials 
 						are in the immediate vicinity. Unlike the other sites, this very young crater very probably punched 
 						through both materials. 
 						Bedrock of both mineralogies should be within easy reach, relatively speaking.
 						</span>
-					</button>
-					<button class="numbers tooltipBR" style="top: 43%; left: 60%;">3
+				</button>
+				<button class="numbers tooltipBR" style="top: 43%; left: 60%;">3
 						<span>
 						<img src="img/lalande-titanium.jpg" alt="high concentrations of titanium near Lalande crater">
 						This combination of Clementine mission camera data suggests high concentrations of titanium in some areas of Lalande, 
 						probably in the form of ilmenite. 
 						That is a mineral with the formula FeTiO3 that can be processed with hydrogen to produce iron, water, and titanium dioxide.
 						</span>
-					</button>
-					<button class="numbers tooltipBR" style="top: 10%; left: 55%;">4
+				</button>
+				<button class="numbers tooltipBR" style="top: 10%; left: 55%;">4
 						<span>About another 100 km north is the equator. Something in a near equatorial orbit would be accessible to 
 						Lalande a few times a day - like an upper stage full of fuel that would allow the payload launched from the 
 						surface to be much larger. 
@@ -158,14 +156,13 @@
 						have to deal with plane changes and orbital dynamics that requires more fuel and far fewer rendezvous opportunities 
 						than the poles or the equator. 
 						</span>
-					</button>
+				</button>
 				<img src="img/LalandeRegion.svg" alt="Lalande Crater overview">
-			 	
-				</div>
 			</div>
-			<div class="col-4 col-m-4"> 
-				<div class="darkYellow pix">
-						<button class="numbers tooltipB" style="top: 25%; left: 66%;">5
+		</div>
+		<div class="col-4 col-m-4"> 
+			<div class="darkYellow pix">
+				<button class="numbers tooltipB" style="top: 25%; left: 66%;">5
 							<span>Here is a collection of especially large boulders, 10 to 30 
 							m across above the surface. They are all partially submerged so 
 							some will be larger below the surface. 
@@ -178,8 +175,8 @@
 							so they could be made of just one or two minerals and be good feedstock for 
 							refining processes.
 							</span>
-						</button>
-						<button class="numbers tooltipBBL" style="top: 18%; left: 45%;">6
+				</button>
+				<button class="numbers tooltipBBL" style="top: 18%; left: 45%;">6
 						<span>Case in point - the boulders with the especially long shadows just left of the 
 						marker. They are huge, the size of barns. They are so useful, the first phase of 
 						the initial base will go here, nestled against them. The first habitats will 
@@ -187,8 +184,8 @@
 						to them so they can apply force without tipping, or drag themselves out of a spot if 
 						they get stuck. 
 						</span>
-						</button>
-						<button class="numbers tooltipB" style="top: 48%; left: 51%;">7
+				</button>
+				<button class="numbers tooltipB" style="top: 48%; left: 51%;">7
 						<span>
 						Here is a fresh crater, right beside Lalande which is 
 						also a fresh crater. 
@@ -201,13 +198,13 @@
 						long term. But that takes a lot of 
 						infrastructure, so it will be presented as part of later phases.  
 						</span>
-						</button>
-						<img src="img/LalandeSite500.jpg" alt="East rim of Lalande Crater">
-				</div>
+				</button>
+				<img src="img/LalandeSite500.jpg" alt="East rim of Lalande Crater">
 			</div>
-			<div class="col-4 col-m-4">
-				<div class="darkYellow pix">
-					<button class="numbers tooltipML" style="top: 54%; left: 4%;">8
+		</div>
+		<div class="col-4 col-m-4">
+			<div class="darkYellow pix">
+				<button class="numbers tooltipML" style="top: 54%; left: 4%;">8
 							<span>
 								<img class="tooltip-img" src="http://moonwards.com/img/debrisField.jpg" 
 								alt="boulders and debris reaching 
@@ -217,14 +214,14 @@
 							It is full of boulders 50 to 100 m across. 
 							They could be bedrock, possibly good ore without digging.  
 							</span>
-					</button>
-					<button class="numbers tooltipML" style="top: 30%; left: 50%;">9
+				</button>
+				<button class="numbers tooltipML" style="top: 30%; left: 50%;">9
 							<span>A spaceport is best placed on flat ground far away from other installations. 
 							Rockets can crash on landing or explode on launch - hopefully very rarely, but you 
 							know how it is. This spot is 4 km from all planned structures. 
 							</span>
-					</button>
-					<button class="numbers tooltipML" style="top: 75%; left: 70%;">10
+				</button>
+				<button class="numbers tooltipML" style="top: 75%; left: 70%;">10
 							<span>
 							This hill is the beginning of the highlands, the light areas on the Moon's 
 							surface. They are much older than the dark areas, the maria, which were created 
@@ -234,10 +231,10 @@
 							have the qualities that make basalt such a good construction material.  
 							Some minerals here could be good ore for production of aluminum, glass, quartz, or sapphire. 
 							</span>
-					</button>
+				</button>
 				<img src="img/LalandeArea500.jpg" alt="Southeast Lalande Crater area">
-				</div>
 			</div>
+		</div>
 			<br>
 			<p class="pad15"> 
 			The above images were taken by the <a href="http://lroc.sese.asu.edu/">
