--- a/planning.html
+++ b/planning.html
@@ -44,39 +44,40 @@
 	<img src="http://www.moonwards.com/img/MWLogo-for-black-bckgnd.svg" alt="Moonwards logo" id="logo">
 	</a>
 	  	<nav>
-	  	<div id="nav">
-  		<ul>
-  			<li><a href="index.html">the VMC</a>
+	  		<div id="nav">
   				<ul>
-  					<li><a href="index.html#colony">Colony Phase 1</a>
+  					<li><a href="index.html">The VMC</a>
+ 		 				<ul>
+ 		 					<li><a href="index.html#colony">Colony Phase 1</a></li>
+ 		 				</ul>
+  					</li>
+  					<li><a href="planning.html">Plan</a>
+  						<ul>
+  							<li><a href="planning.html#equipment">Equipment</a></li>
+  							<li><a href="planning.html#structures">Structures</a></li>
+  						</ul>
+  					</li>
+  					<li><a href="learn.html">Learn</a>
+  						<ul>
+  							<li><a href="learn.html#interactives">Interactives</a></li>
+  							<li><a href="learn.html#lessons">Lessons</a></li>
+  						</ul>
+  					<li><a href="why.html">Why</a>
+  						<ul>
+  							<li><a href="why.html#about">About Us</a></li>
+  						</ul>
+  					</li>
+  					<li><a href="http://moonwards1.blogspot.mx/">Talk</a>
+  						<ul>
+  							<li><a href="http://moonwards1.blogspot.mx/">Blog</a></li>
+  							<li><a href="http://www.moonwards.com/forum/">Forum</a></li>
+  						</ul>
+  					</li>
+					<li><a href="https://realtimeboard.com/app/board/o9J_k0iGgz4=/">Whiteboard</a>
   					</li>
   				</ul>
-  			</li>
-  			<li><a href="planning.html">Plan</a>
-  			<ul>
-  					<li><a href="planning.html#equipment">Equipment</a></li>
-  					<li><a href="planning.html#structures">Structures</a></li>
-  				</ul>
-  			</li>
-  			<li><a href="learn.html">Learn</a>
-  				<ul>
-  					<li><a href="learn.html#interactives">Interactives</a></li>
-  					<li><a href="learn.html#lessons">Lessons</a></li>
-  				</ul>
-  			<li><a href="why.html">Why</a>
-  				<ul>
-  					<li><a href="why.html#about">About Us</a></li>
-  				</ul>
-  			</li>
-  			<li><a href="http://moonwards1.blogspot.mx/">Talk</a>
-  				<ul>
-  				<li><a href="http://moonwards1.blogspot.mx/">Blog</a></li>
-  					<li><a href="http://www.moonwards.com/forum/">Forum</a></li>
-  				</ul>
-  			</li>
-  		</ul>
-  		</div>
-  	</nav>
+  			</div>
+		</nav>
 	</header>
 <div id="container">
     <div class="rowR">
