--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<link rel="stylesheet" href="css/main.css">
 		<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,400,400i,600" rel="stylesheet">
 		<script src="js/modernizr-2.8.3.min.js"></script>
+		<script src="js/styling.js"></script>
 	</head>
 <body>
 <!--[if lt IE 8]>
@@ -1008,3 +1009,4 @@ A lot of stuff on Moonwards relies on modern standards, so you may want to <a hr
 	</div>
 </body>
 </html>
+
