--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@ A lot of stuff on Moonwards relies on modern standards, so you may want to <a hr
 			</p>
 		<!--temporary layout-->
 		<center>
-			<img src="img/thumb/Crater.png">
+			<img src="img/thumb/Crater.png" width="1024" height="1024">
 			<a href="webplayer/webplayer.html?load=../blend4web/LalandeMarkers.json">
 				<svg class="overlay" onmouseover="this.innerHTML=styling.overlay1024High" onmouseout="this.innerHTML=styling.overlay1024Low;" width="1024" height="1024">
 					<path d="M512 512m-128 0q0 -128 128 -128q128 0 128 128q0 128 -128 128q-128 0 -128 -128" fill="black" stroke="rgb(255,200,0)" stroke-width="8"/>
