removed scripts we no longer use
Former-commit-id: c3c74069be89406cd502f9a1d7b377c692a4212f [formerly d0cea550293dd5dd0001d7e3635614d2e6b56781]
Former-commit-id: 71d9b9980e7d8dd36d821c6a3a649b8448f983a0

--- a/learn.html
+++ b/learn.html
@@ -15,9 +15,7 @@
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/cssportal.tooltip.css">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,400,400i,600">
-		<script src="js/plugins.js"></script>
-		<script src="js/main.js"></script>
-		<script src="js/vendor/modernizr-2.8.3.min.js"></script>
+		<script src="js/modernizr-2.8.3.min.js"></script>
 		<script type="text/x-mathjax-config">
 //this is a script for making the single $ inline delimeter for Mathjax work.
 //From this stack exchange post: http://tex.stackexchange.com/a/27656
