header image url
Former-commit-id: 0441d46aa6dafc16fa3f529d8d7555d372c322b5

--- a/planning.html
+++ b/planning.html
@@ -27,7 +27,7 @@ Please <a href="https://www.mozilla.org/en-US/firefox/new/">upgrade your browser
 <![endif]-->
 	<header>
 	<a href="http://www.moonwards.com" style="background-color:transparent;">
-	<img src="http://www.moonwards.com/img/MWLogo-for-black-bckgnd.svg" alt="Moonwards logo" id="logo">
+	<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards logo" id="logo">
 	</a>
 	  	<nav>
 	  		<div id="nav">
