--- a/index.html
+++ b/index.html
@@ -363,12 +363,8 @@ A lot of stuff on Moonwards relies on modern standards, so you may want to <a hr
 			</p>
 		<!--temporary layout-->
 		<center>
-			<img src="img/thumb/Crater.png" class="realsize" width="1024" height="1024">
 			<a href="webplayer/webplayer.html?load=../blend4web/LalandeMarkers.json">
-				<svg class="overlay" onmouseover="this.innerHTML=styling.overlay1024High" onmouseout="this.innerHTML=styling.overlay1024Low;" width="1024" height="1024">
-					<path d="M512 512m-128 0q0 -128 128 -128q128 0 128 128q0 128 -128 128q-128 0 -128 -128" fill="black" stroke="rgb(255,200,0)" stroke-width="8"/>
-					<path d="M544 512m-64 -75l96 75l-96 75 l0 -150" fill="rgb(255,200,0)"/>
-				</svg>
+				<img src="img/thumb/CraterOvelay.jpg" width="1024" height="1024" class="overlay">
 			</a>
 		</center>
 		<!--<iframe allowfullscreen width="70%" onload="this.height=Math.floor(this.offsetWidth*0.6)" 
