--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@ A lot of stuff on Moonwards relies on modern standards, so you may want to <a hr
 		<!--temporary layout-->
 		<center>
 			<a href="webplayer/webplayer.html?load=../blend4web/LalandeMarkers.json">
-				<img src="img/thumb/CraterOvelay.jpg" width="1024" height="1024" class="overlay">
+				<img src="img/thumb/CraterOverlay.jpg" width="1024" height="1024" class="overlay">
 			</a>
 		</center>
 		<!--<iframe allowfullscreen width="70%" onload="this.height=Math.floor(this.offsetWidth*0.6)" 
