overriding css on image width
Former-commit-id: f30ff6ba96b8d781b46a6e6ab160e1e1e56a70b9 [formerly 5336324c9e7a06797363c2bb7f3fef08aee95c57]
Former-commit-id: ecc76c8b2c8f919f1b16eb865b1539171069fd1e

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ A lot of stuff on Moonwards relies on modern standards, so you may want to <a hr
 	</div>
 	<div class="rowR darkYellow">
 		<div class="col-12 col-m-12">
-					<div class="darkYellow pix">
+			<div class="darkYellow pix">
 					<button class="numbers tooltipBL" style="top: 37%; left: 70%;">11
 						<span>The bits poking out furthest from the crater wall are just emerging from shadow in this shot. 
 						The sun was 37<sup>o</sup> above the horizon at this moment, so the angle of the crater wall must be 
@@ -354,7 +354,7 @@ A lot of stuff on Moonwards relies on modern standards, so you may want to <a hr
 						</button>
 					
 					<img src="img/Apollo16view1200.jpg" alt="view from south of Lalande taken by Apollo 16">
-				</div>
+			</div>
 		</div>
 	</div>
 	<div class="rowL black pad15" id="b4w_Lalande">
@@ -364,7 +364,7 @@ A lot of stuff on Moonwards relies on modern standards, so you may want to <a hr
 		<!--temporary layout-->
 		<center>
 			<a href="webplayer/webplayer.html?load=../blend4web/LalandeMarkers.json">
-				<img src="img/thumb/CraterOverlay.jpg" width="1024" height="1024" class="overlay">
+				<img src="img/thumb/CraterOverlay.jpg" style="width=1024;height=1024;" class="overlay">
 			</a>
 		</center>
 		<!--<iframe allowfullscreen width="70%" onload="this.height=Math.floor(this.offsetWidth*0.6)" 
