--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 A lot of stuff on Moonwards relies on modern standards, so you may want to <a href="https://www.mozilla.org/en-US/firefox/new/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
 	<header>
-		<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards logo" id="logo">
+		<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards" id="logo">
 	  	<nav>
 	  		<div id="nav">
   				<ul>
@@ -352,7 +352,6 @@ A lot of stuff on Moonwards relies on modern standards, so you may want to <a hr
 						Excellent for creating fertile soil and such too. What a score that would be. 
 						</span>
 						</button>
-					
 					<img src="img/Apollo16view1200.jpg" alt="view from south of Lalande taken by Apollo 16">
 			</div>
 		</div>
@@ -364,7 +363,7 @@ A lot of stuff on Moonwards relies on modern standards, so you may want to <a hr
 		<!--temporary layout-->
 		<center>
 			<a href="webplayer/webplayer.html?load=../blend4web/LalandeMarkers.json">
-				<img src="img/thumb/CraterOverlay.jpg" style="width:1024;height:1024;" class="overlay">
+				<img src="img/thumb/CraterOverlay.jpg" style="width:1024px;height:1024px;" class="overlay" alt="Link to 3D model of the Lalande crater">
 			</a>
 		</center>
 		<!--<iframe allowfullscreen width="70%" onload="this.height=Math.floor(this.offsetWidth*0.6)" 
