--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ A lot of stuff on Moonwards relies on modern standards, so you may want to <a hr
 			<div class="darkYellow pix">
 				<button class="numbers tooltipML" style="top: 54%; left: 4%;">8
 							<span>
-								<img class="tooltip-img" src="http://moonwards.com/img/debrisField.jpg" 
+								<img class="tooltip-img" src="img/debrisField.jpg" 
 								alt="boulders and debris reaching 
 								a stone shelf within Lalande">
 							This is a debris field 1.5 km long by 1 km wide, created by material 
