--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 		<meta name="theme-color" content="#ffffff">
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-		<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
-		<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
+		<link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
+		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/cssportal.tooltip.css">
 		<link rel="stylesheet" href="css/main.css">
@@ -286,7 +286,7 @@ A lot of stuff on Moonwards relies on modern standards, so you may want to <a hr
 					</button>
 					<button class="numbers tooltipR" style="top: 71%; left: 36%;">16
 						<span>
-						<img class="tooltip-img" src="http://moonwards.com/img/lal-lava-tube1.jpg" alt="possible lava tube">
+						<img class="tooltip-img" src="img/lal-lava-tube1.jpg" alt="possible lava tube">
 						Here is an example of the same phenomenon as #15, much closer to Cernan's Promise. 
 						These are called lava tubes, because they were made as the lava produced by the meteor 
 						impact that created Lalande cooled. Or at least, these mostly look like lava <i>cracks</i>, 
