--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@ A lot of stuff on Moonwards relies on modern standards, so you may want to <a hr
 			</p>
 		<!--temporary layout-->
 		<center>
-			<a href="webplayer/webplayer.html?load=../blend4web/LalandeMarkers.json">
+			<a href="webplayer/webplayer.html?load=../blend4web/LalandeMarkers.json" class="linkImage">
 				<img src="img/thumb/CraterOverlay.jpg" style="width:1024px;height:1024px;" class="overlay" alt="Link to 3D model of the Lalande crater">
 			</a>
 		</center>
@@ -453,10 +453,10 @@ A lot of stuff on Moonwards relies on modern standards, so you may want to <a hr
 						material, and all the processes proposed are based on its known properties here.
 					</p>
 					<br class="clearboth">
-				<div class="floatL pad15">
+				<!--<div class="floatL pad15">
 					<iframe width="100%" height="auto" src="TESTbasalt-fiber-plant2.html" 
 					frameborder="1" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
-				</div>
+				</div>-->
 				<p class="black extrapad">
 					This sketch is even more sketchy than the others, more of a schematic really. Basalt rope and cloth are strong and durable here on 
 					Earth, and are made with a simple process. How that process will need to be adapted on the Moon is an open question. It can be done though. 
