--- a/learn.html
+++ b/learn.html
@@ -10,7 +10,6 @@
 		<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
 		<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
 		<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-		<link rel="manifest" href="/manifest.json">	
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/cssportal.tooltip.css">
@@ -170,7 +169,7 @@ window.onload = function(){
 	</div>
 -->
 		<div>
-			<a href="rotovator.html">
+			<a href="rotovator.html" class="linkImage">
 				<img class="realsize" width="262" height="254" src="img/animatedRotovatorLink.png" alt="view the animations!">
 			</a>
 		</div>
@@ -323,9 +322,17 @@ $$v_e=\sqrt{\frac{2\mu}{r}}$$
 				<details>
 					<summary>The Moon</summary>
 					<ul>
+						<li>Mass:7.342 10^22 kg</li>
+						<li>Radius:1.7371 10^6 m</li>
+						<li>Gravitational prameter:4.9048695 10^12 kg^-1 m^3 s^2</li>
+					</ul>
+				</details>
+				<details>
+					<summary>Earth</summary>
+					<ul>
 						<li>Mass:</li>
 						<li>Radius:</li>
-						<li>Gravitational prameter:</li>
+						<li>Gravitational prameter:3.986004418 10^14 kg^-1 m^3 s^2</li>
 					</ul>
 				</details>
 			</details>
