removed centre tags
Former-commit-id: e4787bf48b2dd03fa3dd9a3240b2e5c79e830b1d [formerly 70a6a63998ac92571ef4b3aa2b26df873cb2ca93]
Former-commit-id: 12d0c6baf70f9768788e48f0d10198c0066c31a1

--- a/index.html
+++ b/index.html
@@ -363,15 +363,21 @@ A lot of stuff on Moonwards relies on modern standards, so you may want to <a hr
 		<p> You can move around the map of Lalande below to get a feel for the place. It is an accurate model based on laser 
 				altimeter data from the LRO combined with image data. 
 		</p>
-		<!--temporary layout-->
+	</div>
 		<center>
-			<a href="webplayer/webplayer.html?load=../blend4web/LalandeMarkers.json" class="linkImage">
-				<img src="img/thumb/CraterOverlay512.jpg" style="width:512px;height:512px;" class="overlay" alt="Link to 3D model of the Lalande crater">
-			</a>
+
 		</center>
+	<div class="rowR darkYellow">
+		<div class="col-12 col-m-12">
+			<div class="darkYellow pix">
+				<a href="webplayer/webplayer.html?load=../blend4web/LalandeMarkers.json" class="linkImage">
+					<img src="img/thumb/CraterOverlay512.jpg" style="width:512px;height:512px;" class="overlay" alt="Link to 3D model of the Lalande crater">
+				</a>
+			</div>
+		</div>
+	</div>
 		<!--<iframe allowfullscreen width="70%" onload="this.height=Math.floor(this.offsetWidth*0.6)" 
 		src="webplayer/webplayer.html?load=../blend4web/LalandeMarkers.json"></iframe>-->
-	</div>
 	<div class="rowL">
 		<h2 id="colony" class="col-10 col-m-10">
 		 	<span class="yellow">Colony:</span> Phase 1 of Cernan's Promise
