--- a/index.html
+++ b/index.html
@@ -361,10 +361,10 @@ A lot of stuff on Moonwards relies on modern standards, so you may want to <a hr
 	</div>
 	<div class="rowR darkYellow">
 		<div class="col-12 col-m-12">
-			<span class="black pad15" id="b4w_Lalande">
+			<div class="rovL black pad15" id="b4w_Lalande">
 				You can move around this 3D map of Lalande to get a feel for the place. It is an accurate model based on laser 
 				altimeter data from the LRO combined with image data. 
-			</span>
+			</div>
 			<div class="darkYellow pix">
 				<a href="webplayer/webplayer.html?load=../blend4web/LalandeMarkers.json" class="linkImage">
 					<img src="img/thumb/CraterOverlay512.jpg" style="width:512px;height:512px;" class="overlay" alt="Link to 3D model of the Lalande crater">
