--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@ A lot of stuff on Moonwards relies on modern standards, so you may want to <a hr
 	</div>
 	<div class="rowR darkYellow">
 		<div class="col-12 col-m-12">
-			<div class="rovL black pad15" id="b4w_Lalande">
+			<div class="rovL black pad15" id="b4w_Lalande" style="max-width: 500px;">
 				You can move around this 3D map of Lalande to get a feel for the place. It is an accurate model based on laser 
 				altimeter data from the LRO combined with image data. 
 			</div>
@@ -418,7 +418,7 @@ A lot of stuff on Moonwards relies on modern standards, so you may want to <a hr
 	 </div>
 	<br>
 	<div id="sketchfab">
-		<p class="black roundAll col-10c12">
+		<p class="black roundAll">
 			The Sketchfab 3d models below can be navigated using the buttons that appears in their bottom right corner when they load, after clicking the 'play' arrow. 
 			Take the tour through them with the Annotations buttons, to see explanations. Double click / tap anywhere on the models to make that spot the pivot point, then when you click-drag the 
 			mouse or slide your finger, your view will rotate around it. Consider clicking the button on the far right to show the model full-screen. 
